my-website/templates/service-website-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-blue
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-website
