my-website/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
spec:
  rules:
  - host: blue.luka.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-blue-service
            port:
              number: 80
  - host: green.luka.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-green-service
            port:
              number: 80
  - host: yellow.luka.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-yellow-service
            port:
              number: 80
